--- a/style.css
+++ b/style.css
@@ -187,6 +187,8 @@ footer p{
 }
 
 /*================================= PRODUCTS PAGE =============================*/
+
+/*---------------- section 1 --------------------*/
 #products-1{
 	margin-top: 6rem;
 	margin-bottom: 12rem;
@@ -206,8 +208,11 @@ footer p{
 }
 
 @media(max-width: 1100px){
+	#products-1 .col-right{
+		top: -15%
+	}
 	#products-1 .col-left, #products-2 .col-left-2{
-		bottom: -33%;
+		bottom: -30%;
 	}
 }
 @media(max-width: 992px){
@@ -227,8 +232,9 @@ footer p{
 	}
 }
 
+/* ------------ section 2 ------------- */
 #products-2{
-	margin-top: 15rem;
+	margin-top: 18rem;
 	margin-bottom: 10rem;
 }
 #products-2 .col-right-2{
@@ -237,4 +243,17 @@ footer p{
 #products-2 .col-left-2{
 	right: 0;
 	bottom: -23%;
+}
+
+@media(max-width: 1100px){
+	#products-2{
+		margin-bottom: 15rem;
+	}
+	#products-2 .col-right-2{
+		top: -20%;
+	}
+	#products-2 .col-left-2{
+		right: 0;
+		bottom: -38%;
+	}
 }
